translators/qhasm/qhasmParser.output
   0  $accept : %entry% $end

   1  program : statements EOF

   2  statements : statement spaces statements
   3             | annotations statements
   4             |

   5  spaces : EOL spaces
   6         | EOL

   7  annotations : annots

   8  annots : ANNOT spaces annots
   9         | ANNOT spaces

  10  statement : stmtkind

  11  stmtkind : typed VAR
  12           | var EQ cast LPAREN addr RPAREN
  13           | var EQ typem LSQUARE addr RSQUARE
  14           | cast LPAREN addr RPAREN EQ atomic
  15           | typem LSQUARE addr RSQUARE EQ atomic
  16           | var EQ expr ifcarry
  17           | var PLUSEQ addexpr
  18           | CARRY QUESTION var PLUSEQ addexpr
  19           | var MINUSEQ subexpr
  20           | CARRY QUESTION var MINUSEQ subexpr
  21           | var MULTEQ atomic
  22           | var ANDEQ atomic
  23           | var OREQ atomic
  24           | var XOREQ atomic
  25           | cast2 var var EQ atomic MULT atomic
  26           | var var EQ atomic MULT atomic
  27           | cast2 var var PLUSEQ atomic MULT atomic
  28           | var var PLUSEQ atomic MULT atomic
  29           | var EQ MINUS var
  30           | var EQ NOT var
  31           | var EQ LPAREN var DOT var RPAREN SHIFTL atomic
  32           | var SHIFTLEQ atomic
  33           | var EQ LPAREN var var RPAREN SHIFTR atomic
  34           | cast2 var SHIFTREQ atomic
  35           | INPUT VAR
  36           | CALLER VAR
  37           | ENTER VAR
  38           | LEAVE
  39           | RETURN
  40           | COMMENT

  41  ifcarry : IF NOT CARRY
  42          | IF CARRY
  43          |

  44  expr : atomic
  45       | atomic PLUS atomic
  46       | atomic PLUS atomic PLUS atomic
  47       | atomic MULT atomic
  48       | atomic AND atomic
  49       | LPAREN atomic SHIFTL atomic RPAREN
  50       | LPAREN atomic UNSIGNED_SHIFTR atomic RPAREN
  51       | atomic PLUS LPAREN atomic SHIFTL atomic RPAREN
  52       | atomic PLUS LPAREN atomic UNSIGNED_SHIFTR atomic RPAREN

  53  addexpr : atomic
  54          | atomic PLUS atomic

  55  subexpr : atomic
  56          | atomic MINUS atomic

  57  atomic : const
  58         | CARRY
  59         | var
  60         | cast LPAREN addr RPAREN
  61         | typem LSQUARE addr RSQUARE
  62         | cast AND VAR
  63         | typem LSQUARE VAR RSQUARE

  64  addr : var PLUS num
  65       | var PLUS var
  66       | var PLUS var MULT num
  67       | var PLUS num PLUS var MULT num

  68  var : VAR

  69  const : num
  70        | HEX

  71  num : NUM

  72  typem : MEM64
  73        | MEM32

  74  typed : INT64
  75        | INT32
  76        | INT3232
  77        | INT6464
  78        | FLOAT80
  79        | STACK32
  80        | STACK64
  81        | STACK128
  82        | STACK256
  83        | STACK512

  84  cast : MULT LPAREN typec MULT RPAREN

  85  cast2 : LPAREN typec RPAREN

  86  typec : INT8
  87        | INT16
  88        | INT32
  89        | INT64
  90        | UINT8
  91        | UINT16
  92        | UINT32
  93        | UINT64
  94        | UINT128

  95  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (95)
	statements : .  (4)

	COMMENT  shift 3
	VAR  shift 4
	LPAREN  shift 5
	ANNOT  shift 6
	MULT  shift 7
	CARRY  shift 8
	INT32  shift 9
	INT64  shift 10
	INT3232  shift 11
	INT6464  shift 12
	FLOAT80  shift 13
	STACK32  shift 14
	STACK64  shift 15
	STACK128  shift 16
	STACK256  shift 17
	STACK512  shift 18
	MEM32  shift 19
	MEM64  shift 20
	CALLER  shift 21
	INPUT  shift 22
	ENTER  shift 23
	LEAVE  shift 24
	RETURN  shift 25
	EOF  reduce 4

	program  goto 26
	statements  goto 27
	statement  goto 28
	annotations  goto 29
	annots  goto 30
	stmtkind  goto 31
	typed  goto 32
	var  goto 33
	cast  goto 34
	typem  goto 35
	cast2  goto 36


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	stmtkind : COMMENT .  (40)

	.  reduce 40


state 4
	var : VAR .  (68)

	.  reduce 68


state 5
	cast2 : LPAREN . typec RPAREN  (85)

	INT8  shift 37
	INT16  shift 38
	INT32  shift 39
	INT64  shift 40
	UINT8  shift 41
	UINT16  shift 42
	UINT32  shift 43
	UINT64  shift 44
	UINT128  shift 45
	.  error

	typec  goto 46


state 6
	annots : ANNOT . spaces annots  (8)
	annots : ANNOT . spaces  (9)

	EOL  shift 47
	.  error

	spaces  goto 48


state 7
	cast : MULT . LPAREN typec MULT RPAREN  (84)

	LPAREN  shift 49
	.  error


state 8
	stmtkind : CARRY . QUESTION var PLUSEQ addexpr  (18)
	stmtkind : CARRY . QUESTION var MINUSEQ subexpr  (20)

	QUESTION  shift 50
	.  error


state 9
	typed : INT32 .  (75)

	.  reduce 75


state 10
	typed : INT64 .  (74)

	.  reduce 74


state 11
	typed : INT3232 .  (76)

	.  reduce 76


state 12
	typed : INT6464 .  (77)

	.  reduce 77


state 13
	typed : FLOAT80 .  (78)

	.  reduce 78


state 14
	typed : STACK32 .  (79)

	.  reduce 79


state 15
	typed : STACK64 .  (80)

	.  reduce 80


state 16
	typed : STACK128 .  (81)

	.  reduce 81


state 17
	typed : STACK256 .  (82)

	.  reduce 82


state 18
	typed : STACK512 .  (83)

	.  reduce 83


state 19
	typem : MEM32 .  (73)

	.  reduce 73


state 20
	typem : MEM64 .  (72)

	.  reduce 72


state 21
	stmtkind : CALLER . VAR  (36)

	VAR  shift 51
	.  error


state 22
	stmtkind : INPUT . VAR  (35)

	VAR  shift 52
	.  error


state 23
	stmtkind : ENTER . VAR  (37)

	VAR  shift 53
	.  error


state 24
	stmtkind : LEAVE .  (38)

	.  reduce 38


state 25
	stmtkind : RETURN .  (39)

	.  reduce 39


state 26
	%entry% : '\001' program .  (95)

	.  reduce 95


state 27
	program : statements . EOF  (1)

	EOF  shift 54
	.  error


state 28
	statements : statement . spaces statements  (2)

	EOL  shift 47
	.  error

	spaces  goto 55


state 29
	statements : annotations . statements  (3)
	statements : .  (4)

	COMMENT  shift 3
	VAR  shift 4
	LPAREN  shift 5
	ANNOT  shift 6
	MULT  shift 7
	CARRY  shift 8
	INT32  shift 9
	INT64  shift 10
	INT3232  shift 11
	INT6464  shift 12
	FLOAT80  shift 13
	STACK32  shift 14
	STACK64  shift 15
	STACK128  shift 16
	STACK256  shift 17
	STACK512  shift 18
	MEM32  shift 19
	MEM64  shift 20
	CALLER  shift 21
	INPUT  shift 22
	ENTER  shift 23
	LEAVE  shift 24
	RETURN  shift 25
	EOF  reduce 4

	statements  goto 56
	statement  goto 28
	annotations  goto 29
	annots  goto 30
	stmtkind  goto 31
	typed  goto 32
	var  goto 33
	cast  goto 34
	typem  goto 35
	cast2  goto 36


state 30
	annotations : annots .  (7)

	.  reduce 7


state 31
	statement : stmtkind .  (10)

	.  reduce 10


state 32
	stmtkind : typed . VAR  (11)

	VAR  shift 57
	.  error


state 33
	stmtkind : var . EQ cast LPAREN addr RPAREN  (12)
	stmtkind : var . EQ typem LSQUARE addr RSQUARE  (13)
	stmtkind : var . EQ expr ifcarry  (16)
	stmtkind : var . PLUSEQ addexpr  (17)
	stmtkind : var . MINUSEQ subexpr  (19)
	stmtkind : var . MULTEQ atomic  (21)
	stmtkind : var . ANDEQ atomic  (22)
	stmtkind : var . OREQ atomic  (23)
	stmtkind : var . XOREQ atomic  (24)
	stmtkind : var . var EQ atomic MULT atomic  (26)
	stmtkind : var . var PLUSEQ atomic MULT atomic  (28)
	stmtkind : var . EQ MINUS var  (29)
	stmtkind : var . EQ NOT var  (30)
	stmtkind : var . EQ LPAREN var DOT var RPAREN SHIFTL atomic  (31)
	stmtkind : var . SHIFTLEQ atomic  (32)
	stmtkind : var . EQ LPAREN var var RPAREN SHIFTR atomic  (33)

	VAR  shift 4
	PLUSEQ  shift 58
	MINUSEQ  shift 59
	MULTEQ  shift 60
	ANDEQ  shift 61
	OREQ  shift 62
	XOREQ  shift 63
	SHIFTLEQ  shift 64
	EQ  shift 65
	.  error

	var  goto 66


state 34
	stmtkind : cast . LPAREN addr RPAREN EQ atomic  (14)

	LPAREN  shift 67
	.  error


state 35
	stmtkind : typem . LSQUARE addr RSQUARE EQ atomic  (15)

	LSQUARE  shift 68
	.  error


state 36
	stmtkind : cast2 . var var EQ atomic MULT atomic  (25)
	stmtkind : cast2 . var var PLUSEQ atomic MULT atomic  (27)
	stmtkind : cast2 . var SHIFTREQ atomic  (34)

	VAR  shift 4
	.  error

	var  goto 69


state 37
	typec : INT8 .  (86)

	.  reduce 86


state 38
	typec : INT16 .  (87)

	.  reduce 87


state 39
	typec : INT32 .  (88)

	.  reduce 88


state 40
	typec : INT64 .  (89)

	.  reduce 89


state 41
	typec : UINT8 .  (90)

	.  reduce 90


state 42
	typec : UINT16 .  (91)

	.  reduce 91


state 43
	typec : UINT32 .  (92)

	.  reduce 92


state 44
	typec : UINT64 .  (93)

	.  reduce 93


state 45
	typec : UINT128 .  (94)

	.  reduce 94


state 46
	cast2 : LPAREN typec . RPAREN  (85)

	RPAREN  shift 70
	.  error


state 47
	spaces : EOL . spaces  (5)
	spaces : EOL .  (6)

	EOL  shift 47
	COMMENT  reduce 6
	VAR  reduce 6
	LPAREN  reduce 6
	ANNOT  reduce 6
	MULT  reduce 6
	CARRY  reduce 6
	INT32  reduce 6
	INT64  reduce 6
	INT3232  reduce 6
	INT6464  reduce 6
	FLOAT80  reduce 6
	STACK32  reduce 6
	STACK64  reduce 6
	STACK128  reduce 6
	STACK256  reduce 6
	STACK512  reduce 6
	MEM32  reduce 6
	MEM64  reduce 6
	CALLER  reduce 6
	INPUT  reduce 6
	ENTER  reduce 6
	LEAVE  reduce 6
	RETURN  reduce 6
	EOF  reduce 6

	spaces  goto 71


48: shift/reduce conflict (shift 6, reduce 9) on ANNOT
state 48
	annots : ANNOT spaces . annots  (8)
	annots : ANNOT spaces .  (9)

	ANNOT  shift 6
	COMMENT  reduce 9
	VAR  reduce 9
	LPAREN  reduce 9
	MULT  reduce 9
	CARRY  reduce 9
	INT32  reduce 9
	INT64  reduce 9
	INT3232  reduce 9
	INT6464  reduce 9
	FLOAT80  reduce 9
	STACK32  reduce 9
	STACK64  reduce 9
	STACK128  reduce 9
	STACK256  reduce 9
	STACK512  reduce 9
	MEM32  reduce 9
	MEM64  reduce 9
	CALLER  reduce 9
	INPUT  reduce 9
	ENTER  reduce 9
	LEAVE  reduce 9
	RETURN  reduce 9
	EOF  reduce 9

	annots  goto 72


state 49
	cast : MULT LPAREN . typec MULT RPAREN  (84)

	INT8  shift 37
	INT16  shift 38
	INT32  shift 39
	INT64  shift 40
	UINT8  shift 41
	UINT16  shift 42
	UINT32  shift 43
	UINT64  shift 44
	UINT128  shift 45
	.  error

	typec  goto 73


state 50
	stmtkind : CARRY QUESTION . var PLUSEQ addexpr  (18)
	stmtkind : CARRY QUESTION . var MINUSEQ subexpr  (20)

	VAR  shift 4
	.  error

	var  goto 74


state 51
	stmtkind : CALLER VAR .  (36)

	.  reduce 36


state 52
	stmtkind : INPUT VAR .  (35)

	.  reduce 35


state 53
	stmtkind : ENTER VAR .  (37)

	.  reduce 37


state 54
	program : statements EOF .  (1)

	.  reduce 1


state 55
	statements : statement spaces . statements  (2)
	statements : .  (4)

	COMMENT  shift 3
	VAR  shift 4
	LPAREN  shift 5
	ANNOT  shift 6
	MULT  shift 7
	CARRY  shift 8
	INT32  shift 9
	INT64  shift 10
	INT3232  shift 11
	INT6464  shift 12
	FLOAT80  shift 13
	STACK32  shift 14
	STACK64  shift 15
	STACK128  shift 16
	STACK256  shift 17
	STACK512  shift 18
	MEM32  shift 19
	MEM64  shift 20
	CALLER  shift 21
	INPUT  shift 22
	ENTER  shift 23
	LEAVE  shift 24
	RETURN  shift 25
	EOF  reduce 4

	statements  goto 75
	statement  goto 28
	annotations  goto 29
	annots  goto 30
	stmtkind  goto 31
	typed  goto 32
	var  goto 33
	cast  goto 34
	typem  goto 35
	cast2  goto 36


state 56
	statements : annotations statements .  (3)

	.  reduce 3


state 57
	stmtkind : typed VAR .  (11)

	.  reduce 11


state 58
	stmtkind : var PLUSEQ . addexpr  (17)

	NUM  shift 76
	HEX  shift 77
	VAR  shift 4
	MULT  shift 7
	CARRY  shift 78
	MEM32  shift 19
	MEM64  shift 20
	.  error

	var  goto 79
	cast  goto 80
	typem  goto 81
	atomic  goto 82
	addexpr  goto 83
	const  goto 84
	num  goto 85


state 59
	stmtkind : var MINUSEQ . subexpr  (19)

	NUM  shift 76
	HEX  shift 77
	VAR  shift 4
	MULT  shift 7
	CARRY  shift 78
	MEM32  shift 19
	MEM64  shift 20
	.  error

	var  goto 79
	cast  goto 80
	typem  goto 81
	atomic  goto 86
	subexpr  goto 87
	const  goto 84
	num  goto 85


state 60
	stmtkind : var MULTEQ . atomic  (21)

	NUM  shift 76
	HEX  shift 77
	VAR  shift 4
	MULT  shift 7
	CARRY  shift 78
	MEM32  shift 19
	MEM64  shift 20
	.  error

	var  goto 79
	cast  goto 80
	typem  goto 81
	atomic  goto 88
	const  goto 84
	num  goto 85


state 61
	stmtkind : var ANDEQ . atomic  (22)

	NUM  shift 76
	HEX  shift 77
	VAR  shift 4
	MULT  shift 7
	CARRY  shift 78
	MEM32  shift 19
	MEM64  shift 20
	.  error

	var  goto 79
	cast  goto 80
	typem  goto 81
	atomic  goto 89
	const  goto 84
	num  goto 85


state 62
	stmtkind : var OREQ . atomic  (23)

	NUM  shift 76
	HEX  shift 77
	VAR  shift 4
	MULT  shift 7
	CARRY  shift 78
	MEM32  shift 19
	MEM64  shift 20
	.  error

	var  goto 79
	cast  goto 80
	typem  goto 81
	atomic  goto 90
	const  goto 84
	num  goto 85


state 63
	stmtkind : var XOREQ . atomic  (24)

	NUM  shift 76
	HEX  shift 77
	VAR  shift 4
	MULT  shift 7
	CARRY  shift 78
	MEM32  shift 19
	MEM64  shift 20
	.  error

	var  goto 79
	cast  goto 80
	typem  goto 81
	atomic  goto 91
	const  goto 84
	num  goto 85


state 64
	stmtkind : var SHIFTLEQ . atomic  (32)

	NUM  shift 76
	HEX  shift 77
	VAR  shift 4
	MULT  shift 7
	CARRY  shift 78
	MEM32  shift 19
	MEM64  shift 20
	.  error

	var  goto 79
	cast  goto 80
	typem  goto 81
	atomic  goto 92
	const  goto 84
	num  goto 85


state 65
	stmtkind : var EQ . cast LPAREN addr RPAREN  (12)
	stmtkind : var EQ . typem LSQUARE addr RSQUARE  (13)
	stmtkind : var EQ . expr ifcarry  (16)
	stmtkind : var EQ . MINUS var  (29)
	stmtkind : var EQ . NOT var  (30)
	stmtkind : var EQ . LPAREN var DOT var RPAREN SHIFTL atomic  (31)
	stmtkind : var EQ . LPAREN var var RPAREN SHIFTR atomic  (33)
